<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_table_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.victor.ejercicio1.TableLayout"
    android:stretchColumns="*">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:text="@string/button_n1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_n1"
            android:onClick="escribirNumero"/>

        <Button
            android:text="@string/button_n2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_n2"
            android:onClick="escribirNumero"/>

        <Button
            android:text="@string/button_n3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="escribirNumero"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <Button
            android:text="@string/button_n4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_n4"
            android:onClick="escribirNumero"/>

        <Button
            android:text="@string/button_n5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_n5"
            android:onClick="escribirNumero"/>

        <Button
            android:text="@string/button_n6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_n6"
            android:onClick="escribirNumero"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text="@string/button_n7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_n7"
            android:onClick="escribirNumero"/>

        <Button
            android:text="@string/button_n8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_n8"
            android:onClick="escribirNumero"/>

        <Button
            android:text="@string/button_n9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_n9"
            android:onClick="escribirNumero"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text="@string/button_n0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_n0"
            android:onClick="escribirNumero"
            android:layout_column="1"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_numeros"
            android:layout_span="3"
            android:height="50dp"
            android:onClick="limpiar"/>
    </TableRow>

</TableLayout>
