<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.victor.ejercicio1.LinearLayout">
    <Button
        android:id="@+id/button_siguiente2"
        android:text="@string/button_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cambiarRelativeLayout"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup">

        <RadioButton
            android:text="@string/opcion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1"
            android:layout_weight="1"
            android:textColorLink="@color/colorRadioButton"
            android:selectAllOnFocus="true"
            android:onClick="subirNivel"/>

        <RadioButton
            android:text="@string/opcion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_weight="1"
            android:textColorLink="@color/colorRadioButton"
            android:onClick="subirNivel"/>

        <RadioButton
            android:text="@string/opcion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:layout_weight="1"
            android:textColorLink="@color/colorRadioButton"
            android:onClick="subirNivel"/>

    </RadioGroup>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/mario1"
        android:id="@+id/imageView" />

</LinearLayout>
